Bug 1047973 - pattern with patternUnits=objectBoundingBox and preserveAspectRatio=... meet stretches to the size of a shape. r=dholbert